# py_zip_ng

./: .gitignore  Cargo.toml  README.md  libz.so.1.2.11.zlib-ng  setup.py  test.py
py_zip_ng/: __init__.py
py_zip_ng.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: lib.rs
